--- a/style.css
+++ b/style.css
@@ -44,3 +44,34 @@ p{
       text-align: center;
       margin-top: 70px;
   }
+  .fild{
+      color: yellow;
+      font-size: 12px;
+  }
+  .unfild{
+      font-size: 12px;
+  }
+  .info{
+      display: flex;
+
+  }
+
+  .maininfo{
+     width: 25%;
+  }
+  .footer1{
+      text-align: center;
+      font-size: 30px;
+      color: thistle;
+  }
+  footer{
+      text-align: center;
+      font-size: 20px;
+  }
+  .icon{
+      text-align: center;
+  }
+  .footer-item{
+      background-color: blue;
+      color: white;
+  }
